完善复选框与输入框设置

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,12 +26,13 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="54dp"
         android:layout_marginEnd="16dp"
-        android:textSize="16sp"
-        android:inputType="phone"
-        android:imeOptions="actionNext"
+        android:background="@drawable/line_et_bg"
         android:hint="@string/input_telephone"
+        android:imeOptions="actionNext"
+        android:inputType="text"
         android:paddingTop="0dp"
         android:paddingBottom="28dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3">
@@ -45,26 +46,27 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="27dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/line_et_bg"
         android:hint="@string/input_password"
-        android:paddingTop="0dp"
-        android:background="@drawable/edit_background"
-        android:textCursorDrawable="@drawable/bg_cursor"
-        android:textSize="16sp"
         android:imeOptions="actionNext"
         android:inputType="textPassword"
-        android:paddingBottom="28dp"
+        android:paddingTop="0dp"
+        android:paddingBottom="25dp"
+        android:textCursorDrawable="@drawable/bg_cursor"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/input_telephone" />
 
     <CheckBox
         android:id="@+id/cbEat"
-        style="@style/Widget.AppCompat.CompoundButton.RadioButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/checkbox_img"
+        android:button="@null"
         android:padding="0dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
@@ -72,7 +74,8 @@
         android:id="@+id/scroll_text"
         android:layout_width="304dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="39dp"
         android:padding="0dp"
         app:layout_constraintStart_toEndOf="@+id/cbEat"
         app:layout_constraintTop_toBottomOf="@+id/editText2">
@@ -100,10 +103,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="#FFA1A6B3"
+        android:background="#DFE1E6"
         android:stateListAnimator="@null"
         android:text="@string/btn_register"
-        android:textColor="#FF333333"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -139,14 +142,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
+        android:layout_marginTop="130dp"
         android:layout_marginEnd="92dp"
-        android:layout_marginBottom="16dp"
         android:text="@string/release_number"
         android:textColor="#FFA1A6B3"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/more_register"
-        app:layout_constraintStart_toEndOf="@+id/note" />
+        app:layout_constraintStart_toEndOf="@+id/note"
+        app:layout_constraintTop_toBottomOf="@+id/btn_register" />
 
     <ImageView
         android:id="@+id/imageView2"
