--- a/app/src/main/res/drawable/edit_background.xml
+++ b/app/src/main/res/drawable/edit_background.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape
-            android:shape="line">
-            <solid android:color="#FFFFFF"/>
+        <shape android:shape="line">
+            <solid android:color="#FFFFFF" />
             <stroke
                 android:width="0.5dp"
-                android:color="#FFA1A6B3"/>
+                android:color="#FFA1A6B3" />
             <padding
                 android:bottom="28dp"
                 android:top="0dp" />
         </shape>
     </item>
+<!--    <item android:state_pressed="true">-->
+<!--        <shape>-->
+<!--            <corners android:radius="4dp" />-->
+<!--            <solid android:color="#FFC730" />-->
+<!--        </shape>-->
+<!--    </item>-->
 </layer-list>
