--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,5 +6,13 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="MainStyle" parent="Theme.AppCompat.Light.NoActionBar"/>
+
+    <style name="MainStyle" parent="Theme.AppCompat.Light.NoActionBar" />
+
+    <style name="MyCheckbox" parent="@android:style/Widget.CompoundButton.CheckBox">
+        <item name="android:button">@drawable/comp_checkbox_normal</item>
+        <item name="android:paddingLeft">10.0dip</item>
+        <item name="android:height">35.0dip</item>
+    </style>
+
 </resources>
