--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -32,6 +32,7 @@
         android:inputType="text"
         android:paddingTop="0dp"
         android:paddingBottom="28dp"
+        android:textCursorDrawable="@drawable/bg_cursor"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,12 +61,11 @@
 
     <CheckBox
         android:id="@+id/cbEat"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="40dp"
-        android:background="@drawable/checkbox_img"
-        android:button="@null"
+        android:button="@drawable/checkbox_img"
         android:padding="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_password" />
